--- a/src/components/nvq-brands-navbar/nvq-brands-navbar.scss
+++ b/src/components/nvq-brands-navbar/nvq-brands-navbar.scss
@@ -2,20 +2,52 @@
   /** @prop --background-color: The color of the navbar */
   --background-color: black;
 
+  /** @prop --arrows-color: The color of the arrows */
+  --arrows-color: #717171;
+
+  /** @prop --arrows-color-focus: The color of the arrows on hover or focus */
+  --arrows-color-focus: #fff;
+
   /** @prop --max-height: The maximum height of the logos. */
   --max-height: 42px;
 
-  display: block;
+  display: flex;
+  width: 100%;
 }
 
-div.bar slot {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+button {
+  width: 64px;
   background-color: var(--background-color);
-  padding: 15px 18px;
-  gap: 24px;
-  ::slotted(a){
-      max-height: var(--max-height);
+  border: 0;
+  padding: 0;
+  margin: 0;
+  svg {
+    fill: var(--arrows-color);
+  }
+  &:hover, &:focus {
+    svg {
+      fill: var(--arrows-color-focus);
+    }
+  }
+}
+
+
+div.slides{
+  flex-grow: 1;
+  flex-shrink: 1;
+  overflow: hidden;
+  slot {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--background-color);
+    padding: 15px 18px;
+    gap: 12px;
+    overflow: hidden;
+    text-align: center;
+    ::slotted(a){
+        max-height: var(--max-height);
+        transition: all 0.3s ease-in-out;
+    }
   }
 }
