--- a/src/components/nvq-brands-navbar/nvq-brands-navbar.scss
+++ b/src/components/nvq-brands-navbar/nvq-brands-navbar.scss
@@ -32,22 +32,29 @@ button {
 }
 
 
-div.slides{
+div.slides {
   flex-grow: 1;
   flex-shrink: 1;
+  background-color: var(--background-color);
   overflow: hidden;
-  slot {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--background-color);
-    padding: 15px 18px;
-    gap: 12px;
+  .carousel-inner{
     overflow: hidden;
-    text-align: center;
-    ::slotted(a){
+    position: relative;
+    background-color: var(--background-color);
+    slot {
+      display: grid;
+      justify-content: center;
+      align-items: center;
+      background-color: var(--background-color);
+      padding: 15px 18px;
+      text-align: center;
+      position: relative;
+      transition: all 0.1s ease-in-out;
+      &::slotted(a) {
         max-height: var(--max-height);
-        transition: all 0.3s ease-in-out;
+        opacity: 1;
+        transition: all 0.1s ease-in-out;
+      }
     }
   }
 }
