--- a/src/components/nvq-brands-navbar/nvq-brands-navbar.scss
+++ b/src/components/nvq-brands-navbar/nvq-brands-navbar.scss
@@ -19,7 +19,7 @@ button {
   width: 64px;
   background-color: var(--background-color);
   border: 0;
-  padding: 0;
+  padding: 0 20px;
   margin: 0;
   svg {
     fill: var(--arrows-color);
